--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         "predicates": [
           {
             "dimension": "mediaType",
-            "value": "callback"
+            "value": "voice"
           }
         ]
       },
