--- a/index.html
+++ b/index.html
@@ -241,14 +241,14 @@
     const queueName2 = queues[queueId2] ? queues[queueId2].name : '';
     return queueName1.localeCompare(queueName2);
 });
-
+if (data2ndAPI.results && data2ndAPI.results.length > 0 && data2ndAPI.results.every(item => item.group && item.group.queueId)) {
 const uniqueQueueIds2 = [...new Set(data2ndAPI.results.map(item => item.group.queueId))];
       // Ordenar uniqueQueueIds según el nombre de la cola
     uniqueQueueIds2.sort((queueId1, queueId2) => {
     const queueName1 = queues[queueId1] ? queues[queueId1].name : '';
     const queueName2 = queues[queueId2] ? queues[queueId2].name : '';
     return queueName1.localeCompare(queueName2);
-});
+});};
       const tableHtml = `<table border="1">
       <tr>
                         <th>Nombre de la cola</th>
@@ -266,12 +266,17 @@ const uniqueQueueIds2 = [...new Set(data2ndAPI.results.map(item => item.group.qu
                       ${uniqueQueueIds.map(queueId => {
 			                const queueName = queues[queueId] || 'Desconocido'; // Obtiene el nombre de la cola del mapeo
                       const rowData = data1stAPI.results.filter(item => item.group.queueId === queueId);
+                      const sumInteracting = rowData.reduce((sum, item) => sum + getMetricValue(item.data, "oInteracting"), 0);
+                      const sumWaiting = rowData.reduce((sum, item) => sum + getMetricValue(item.data, "oWaiting"), 0);
+                      if (data2ndAPI.results && data2ndAPI.results.length > 0 && data2ndAPI.results.every(item => item.group && item.group.queueId)) {
 			                const rowData2 = data2ndAPI.results.filter(item => item.group.queueId === queueId);
-                      //console.log(rowData2)
-                        const sumInteracting = rowData.reduce((sum, item) => sum + getMetricValue(item.data, "oInteracting"), 0);
-                        const sumWaiting = rowData.reduce((sum, item) => sum + getMetricValue(item.data, "oWaiting"), 0);
                         const sumWaiting2 = rowData2.reduce((sum, item) => sum + getWaitingValue(item.data, "oWaiting"), 0);
-                        const activityDate = rowData2.length > 0 ? rowData2[0].entities[0].activityDate : "";
+                        const activityDate = rowData2.length > 0 ? rowData2[0].entities[0].activityDate : "";}
+                        else
+                        {
+                        const sumWaiting2 = 0;
+                        const activityDate = "";
+                        };
                         //console.log(activityDate)
 			const OnQueue = rowData.reduce((sum, item) => sum + getMetricStatusValue(item.data, "e08eaf1b-ee47-4fa9-a231-1200e284798f"), 0);
       const Backoffice = rowData.reduce((sum, item) => sum + getMetricStatusValue(item.data, "6b3a63b6-ee47-4fa9-a231-1200e284798f"), 0);
