--- a/index.html
+++ b/index.html
@@ -164,13 +164,13 @@
             "type": "or",
             "predicates": predicates
           }
-        ]/*,
+        ],
         "predicates": [
           {
             "dimension": "mediaType",
-            "value": "voice"
+            "value": "callback"
           }
-        ]*/
+        ]
       },
       "groupBy": [
         "queueId"
