--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
     const queueName2 = queues[queueId2] ? queues[queueId2].name : '';
     return queueName1.localeCompare(queueName2);
 });
+console.log(data2ndAPI);
 if (data2ndAPI.results && data2ndAPI.results.length > 0 && data2ndAPI.results.every(item => item.group && item.group.queueId)) {
 const uniqueQueueIds2 = [...new Set(data2ndAPI.results.map(item => item.group.queueId))];
       // Ordenar uniqueQueueIds según el nombre de la cola
@@ -274,8 +275,11 @@ const uniqueQueueIds2 = [...new Set(data2ndAPI.results.map(item => item.group.qu
                         const activityDate = "";
                       if (data2ndAPI.results && data2ndAPI.results.length > 0 && data2ndAPI.results.every(item => item.group && item.group.queueId)) {
 			                const rowData2 = data2ndAPI.results.filter(item => item.group.queueId === queueId);
+                      console.log(rowData2);
                         const sumWaiting2 = rowData2.reduce((sum, item) => sum + getWaitingValue(item.data, "oWaiting"), 0);
                         const activityDate = rowData2.length > 0 ? rowData2[0].entities[0].activityDate : "";
+                        console.log(sumWaiting2);
+                        console.log(activityDate);
                       };
                         //console.log(activityDate)
 			const OnQueue = rowData.reduce((sum, item) => sum + getMetricStatusValue(item.data, "e08eaf1b-ee47-4fa9-a231-1200e284798f"), 0);
