--- a/index.html
+++ b/index.html
@@ -256,8 +256,9 @@ const uniqueQueueIds2 = [...new Set(data2ndAPI.results.map(item => item.group.qu
                         <th>Nombre de la cola</th>
                         <th>Interacting</th>
 <th>Waiting</th>
-<th>Waiting2</th>
-<th>Longest Waiting</th>
+<th>Waiting 2</th>
+<th>Longest Waiting </th>
+<th>Longest Waiting 2</th>
 <th>On Queue(idle+interacting)</th>
 <th>Backoffice</th>
 <th>Gestion Contacto</th>
@@ -270,10 +271,10 @@ const uniqueQueueIds2 = [...new Set(data2ndAPI.results.map(item => item.group.qu
                       const rowData = data1stAPI.results.filter(item => item.group.queueId === queueId);
                       const sumInteracting = rowData.reduce((sum, item) => sum + getMetricValue(item.data, "oInteracting"), 0);
                       const sumWaiting = rowData.reduce((sum, item) => sum + getMetricValue(item.data, "oWaiting"), 0);
+                      const activityDate1 = rowData.length > 0 ? rowData[0].data[0].observations[0].observationDate : "";
                         const rowData2 = data2ndAPI.results.filter(item => item.group.queueId === queueId);
                         const sumWaiting2 = rowData2.reduce((sum, item) => sum + getWaitingValue(item.data, "oWaiting"), 0);
                         const activityDate = rowData2.length > 0 ? rowData2[0].entities[0].activityDate : "";
-                        console.log(activityDate);
 			const OnQueue = rowData.reduce((sum, item) => sum + getMetricStatusValue(item.data, "e08eaf1b-ee47-4fa9-a231-1200e284798f"), 0);
       const Backoffice = rowData.reduce((sum, item) => sum + getMetricStatusValue(item.data, "6b3a63b6-ee47-4fa9-a231-1200e284798f"), 0);
       const Contacto = rowData.reduce((sum, item) => sum + getMetricStatusValue(item.data, "e08eaf1b-ee47-4fa9-a231-26ce839850da"), 0);
@@ -286,6 +287,7 @@ const uniqueQueueIds2 = [...new Set(data2ndAPI.results.map(item => item.group.qu
                                   <td>${sumInteracting}</td>
 				                          <td>${sumWaiting}</td>
                                   <td>${sumWaiting2}</td>
+                                  <td>${formatTime(activityDate1)}</td>
                                   <td>${formatTime(activityDate)}</td>
 				                          <td>${OnQueue}</td>
                                   <td>${Backoffice}</td>
