--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ const uniqueQueueIds2 = [...new Set(data2ndAPI.results.map(item => item.group.qu
     }
 
     function getMetricLWTValue(dataItems, metricName) {
-      const observationDataMetric = data.find(item => item.metric === "oWaiting");
+      const observationDataMetric = dataItems.find(item => item.metric === "oWaiting");
   if (observationDataMetric && observationDataMetric.observations) {
     // Obtener el valor máximo de observationData
     const maxObservationData = Math.max(...observationDataMetric.observations.map(obs => obs.observationDate));
