--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@ const uniqueQueueIds2 = [...new Set(data2ndAPI.results.map(item => item.group.qu
 <th>Mas tiempo en espera</th>
 <th>Agentes interactuando</th>
 <th>Ociosos</th>
-<th>Backoffice</th>
-<th>Gestion Contacto</th>
+<th>Gestión back office</th>
+<th>Gestión Contacto</th>
 <th>Descanso</th>
 <th>Pausa visual</th>
 <th>Otros</th>
